# 3d-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
docs/: class_diagram.puml
examples/: CMakeLists.txt  cubes.cpp  load_model.cpp  pyramid_gradient.cpp
include/: intersection.h  primitives.h
models/: apple.off  mushroom.off
src/: CMakeLists.txt  Makefile  application.cpp  application.h  camera.cpp  camera.h  clipping.cpp  clipping.h  cmake_install.cmake  configuration.h  except.cpp  except.h  global_usings.h  intersection.cpp  intersection.h  math_functions.cpp  math_functions.h  object.cpp  object.h  off_loader.cpp  off_loader.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  screen.cpp  screen.h  storage2d.h  util.h  vector4.cpp  vector4.h  world.cpp  world.h  world_init.cpp  world_init.h
test/: CMakeLists.txt  unit_camera.cpp  unit_object.cpp  unit_screen.cpp  unit_storage2d.cpp  unit_triangle.cpp  unit_vector4.cpp  unit_vertex.cpp  unit_world.cpp
